# desdeo-brb

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: draft-pdf.yml  publish.yml  test.yml
desdeo_brb/: __init__.py  brb.py  example_nonlinear_scalar_function.py  example_original_article.py  method.py  polar_plot.py  reasoner.py  testbed.py  utility.py
docs/: backends.md  explainability.md  index.md  installation.md  quickstart.md  references.bib  references.md  training.md
docs/api/: brb.md  inference.md  jax_backend.md  models.md  pyomo_backend.md
notebooks/: 01_getting_started.ipynb  02_multi_attribute.ipynb  03_expert_knowledge.ipynb  04_explainability.ipynb  README.md  article_example_1.ipynb
src/desdeo_brb/: __init__.py  brb.py  inference.py  jax_backend.py  models.py  pyomo_backend.py  utils.py
tests/: test_brb.py
tests/integration/: test_article_examples.py  test_brb_fit_predict.py  test_jax_training.py  test_literature_examples.py  test_pyomo_backend.py
tests/unit/: test_inference.py  test_jax_backend.py  test_models.py  test_utils.py
