[project]
name = "desdeo-brb"
version = "1.0.0"
description = "A trainable Belief Rule-Based (BRB) inference system with an sklearn-compatible API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "scipy",
    "pydantic>=2",
]

[project.optional-dependencies]
jax = ["jax", "jaxlib"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/desdeo_brb"]
