[project]
name = "desdeo-brb"
version = "1.0.0"
description = "A trainable Belief Rule-Based (BRB) inference system with a scikit-learn-compatible API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Giovanni Misitano", email = "giovanni.a.misitano@jyu.fi" },
]
keywords = [
    "belief-rule-base",
    "evidential-reasoning",
    "machine-learning",
    "explainable-ai",
    "RIMER",
    "expert-systems",
    "fuzzy-systems",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
]

[project.optional-dependencies]
jax = ["jax>=0.4", "jaxlib>=0.4"]
pyomo = ["pyomo>=6.0"]
notebooks = ["jupyter>=1.0", "matplotlib>=3.7"]
all = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "pyomo>=6.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.1", "mypy>=1"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-bibtex",
    "pymdown-extensions>=10",
]

[project.urls]
Homepage = "https://github.com/gialmisi/desdeo-brb"
Documentation = "https://desdeo-brb.readthedocs.io"
Repository = "https://github.com/gialmisi/desdeo-brb"
Issues = "https://github.com/gialmisi/desdeo-brb/issues"
Changelog = "https://github.com/gialmisi/desdeo-brb/blob/master/CHANGELOG.md"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "pipeline: pipeline leak detection example tests",
]

[tool.coverage.run]
source = ["src/desdeo_brb"]
branch = true
omit = [
    "*/tests/*",
    "*/jax_backend.py",
    "*/pyomo_backend.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "N803",    # argument name should be lowercase — conflicts with sklearn API (X, y)
    "N806",    # variable in function should be lowercase — same reason
    "SIM108",  # use ternary operator — ternaries are sometimes less readable
    "SIM102",  # nested if — sometimes clearer than combined conditions
]

[tool.hatch.build.targets.wheel]
packages = ["src/desdeo_brb"]
